# mma-model

./: .env.example  .gitignore  README.md  feature_flags.yaml  profiles.yaml  pyproject.toml
.github/workflows/: ci.yml
src/mma_model/: __init__.py  cli.py  config.py
src/mma_model/composites/: pillars.py  rolling.py
src/mma_model/db/: __init__.py  models.py  session.py
src/mma_model/features/: matchup.py
src/mma_model/odds/: the_odds_api.py
src/mma_model/predict/: backtest.py  baseline.py  dataset.py  train.py
src/mma_model/ufcstats/: client.py  ingest.py  parsers.py
src/mma_model/value/: ev.py  kelly.py
tests/: test_backtest.py  test_dataset.py  test_parsers.py  test_value.py
tests/fixtures/: fight_full.html
